newgen handsOn